[Chore] Cicd updates 02 (#425)
* created prelim makefile with tox commands, updated contributing.md

* adding 3.11 to docs, and updating create-env in makefile to install all necessary python versions

* removing 3.8

* updating git workflows to use make

* create coverage report in test

* remove commented tox command

* update check_for_nan, force bool returns

* updates to io.py to pass tests

* testing out change to tsdf to account for new mypy restrcitions

* updating mypy error handling

* revert

* updating mypy.ini to ignore scipy

* remove edits to tox.ini to show versions

* - Fix `bool` conversions in `tempo/intervals.py` to ensure consistent type handling.
- Correct `tox.ini` basepython to `py311` and manage additional dependencies.
- Clarify complex number handling in `fourier_transform` and ensure float usage in `fftfreq`.
- Expand `Makefile` functionality with environment checks for Python and Java setups.

* Add `_cleanup_delta_warehouse` method for Delta test environment cleanup.

Integrate pre- and post-test cleanup of Delta warehouse directories and metastore files in `setUpClass` and `tearDownClass` to ensure a consistent test environment.

* Expand Makefile with enhanced Python environment checks and management.

- Add `.claude` to `.gitignore`.
- Replace `check-pyenv` with `check-python` to support system Python and automate `pyenv` installation.
- Introduce `setup-python-versions` and `setup-all-python-versions` targets for flexible Python version setups.
- Update `venv`, `test`, and `test-all` targets to utilize new utilities.

---------

Co-authored-by: Lorin <lorin.dawson@databricks.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,10 @@ jobs:
         python -m pip install tox tox-gh-actions
     - name: Lint check
       working-directory: ./python
-      run: tox -e lint -- --check --diff
+      run: make lint LINT_PARAMS="-- --check --diff"
     - name: Type check
       working-directory: ./python
-      run: tox -e type-check
+      run: make type-check
 
   test:
     needs: lint-and-check
@@ -37,15 +37,15 @@ jobs:
       matrix:
         config:
           - py: '3.9'
-            dbr: dbr113
+            dbr: 113
           - py: '3.9'
-            dbr: dbr122
+            dbr: 122
           - py: '3.10'
-            dbr: dbr133
+            dbr: 133
           - py: '3.10'
-            dbr: dbr143
+            dbr: 143
           - py: '3.11'
-            dbr: dbr154
+            dbr: 154
       fail-fast: false
     steps:
     - uses: actions/checkout@v4
@@ -62,7 +62,7 @@ jobs:
         python -m pip install tox
     - name: Execute tox envs
       working-directory: ./python
-      run: tox -e ${{ matrix.config.dbr }},coverage-report
+      run: make test coverage-report DBR=${{ matrix.config.dbr }}
     - name: Publish test coverage
       uses: codecov/codecov-action@v4
       with:
