Upgrading Tox to Hatch, and Updating respective commands in Makefile  (#426)
* created prelim makefile with tox commands, updated contributing.md

* adding 3.11 to docs, and updating create-env in makefile to install all necessary python versions

* removing 3.8

* updating git workflows to use make

* create coverage report in test

* initial hatch commit

* updates to makefile

* updating github workflow dependencies to install hatch instead of tox

* fixing posargs issue in lint

* fixing type checker

* adding version call so hatch knows what to pick up

* using correct method in version.py"

* adding get_version to version.py for hatch environment creation

* adding semver as dep in git

* using vcs as hatch version

* updating version.py to dynamically pull version, and semver as dep in all testenvs

* checking semver install

* updating semver

* fixing var ref before assignment in version.py

* fixing correct error type

* getting around coverage circ dep

* forgot to update makefile

* remove commented tox command

* update check_for_nan, force bool returns

* updates to io.py to pass tests

* testing out change to tsdf to account for new mypy restrcitions

* updating mypy error handling

* revert

* updating mypy.ini to ignore scipy

* remove edits to tox.ini to show versions

* linting fix

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox tox-gh-actions
+        python -m pip install hatch 
     - name: Lint check
       working-directory: ./python
       run: make lint LINT_PARAMS="-- --check --diff"
@@ -59,8 +59,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install tox
-    - name: Execute tox envs
+        python -m pip install semver
+        python -m pip install hatch
+    - name: Execute hatch envs
       working-directory: ./python
       run: make test coverage-report DBR=${{ matrix.config.dbr }}
     - name: Publish test coverage
