--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -54,7 +54,8 @@ dependencies = [
   "coverage>=7,<8",
   "jsonref>=1,<2",
   "packaging>=24,<25",
-  "python-dateutil>=2,<3"
+    "python-dateutil>=2,<3",
+    "parameterized>=0.9,<1"
 ]
 
 [tool.hatch.envs.testenv.scripts]
