--- a/python/tox.ini
+++ b/python/tox.ini
@@ -83,22 +83,20 @@ skip_install = true
 deps =
     build
     semver
+    setuptools
+    wheel
 commands =
     python setup.py clean bdist_wheel
 
 [testenv:build-docs]
 description = build documentation
-basepython = py3.10
+basepython = py311
 skipdist = true
 skip_install = true
 allowlist_externals =
     make
 deps =
     -rrequirements/docs.txt
-;    TODO: making this dynamic is difficult in tox, so for now we will just use the latest version
-    ; We should have a top-level makefile that orchestrates this which allows better environment prep and execution of
-    ; shell scripts prior to tox execution. it'll also create a stable interface for migrating to hatch in the future
-    ; since the make commands would not change
     -rrequirements/dbr154.txt
     semver
 commands =
