--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install tox
+          python -m pip install hatch
 
       - name: Build docs
         working-directory: ./python
-        run: tox -e build-docs
+        run: make build-docs
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
