--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,12 +33,11 @@ jobs:
       - name: Check version increment
         run: |
           cd python
-          CURRENT_VERSION=$(python -c "from version import get_version; print(get_version())")
+          CURRENT_VERSION=$(python -c "from version import get_current_git_version; print(get_current_git_version())")
           LATEST_TAG=$(git describe --abbrev=0 --tags || echo "v0.0.0")
           LATEST_VERSION=$(echo $LATEST_TAG | sed 's/^v//')
           echo "Current version: $CURRENT_VERSION"
           echo "Latest tag version: $LATEST_VERSION"
-          exit 1
           if [[ "$CURRENT_VERSION" == "$LATEST_VERSION" ]]; then
             echo "Version in version.py has not been incremented."
             exit 1
