--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check version increment
         run: |
           cd python
-          CURRENT_VERSION=$(python -c "from version import get_current_git_version; print(get_current_git_version())")
+          CURRENT_VERSION=$(python -c "from version import get_version; print(get_version())")
           LATEST_TAG=$(git describe --abbrev=0 --tags || echo "v0.0.0")
           LATEST_VERSION=$(echo $LATEST_TAG | sed 's/^v//')
           echo "Current version: $CURRENT_VERSION"
