Fix Python 3.9 compatibility and coverage configuration
- Added Python 3.9 compatibility for NoneType import in boundaries_tests.py
  NoneType was added to types module in Python 3.10, so we use type(None)
  as fallback for older versions

- Fixed coverage configuration in tox.ini by removing duplicate coverage run
  with --append flag that was causing 'Can't append to data files in parallel
  mode' error. Now pytest runs without coverage since unittest already
  collects coverage data.

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -34,8 +34,8 @@ commands =
     coverage erase
     python -m unittest discover -s tests -p '*_tests.py' -v
     coverage run -m unittest discover -s tests -p '*_tests.py'
-    ; Run pytest with coverage to the same file (appending)
-    coverage run --append -m pytest tests/ -v --ignore=__pycache__
+    ; Run pytest tests without coverage (already covered by unittest)
+    python -m pytest tests/ -v --ignore=__pycache__
 
 [testenv:pytest-only]
 description = run only pytest tests under {envname}
