Fix coverage report generation error
- Remove skip-install from coverage-report environment to ensure source files are accessible
- Remove redundant coverage combine step (already done during test runs)
- Add check in Makefile to ensure .coverage file exists before generating report
- Provide helpful error message when coverage data is missing

--- a/python/Makefile
+++ b/python/Makefile
@@ -229,6 +229,11 @@ build-docs:
 # Combine coverage data and generate report
 .PHONY: coverage-report
 coverage-report:
+	@if [ ! -f .coverage ]; then \
+		echo "Error: No coverage data found (.coverage file missing)"; \
+		echo "Run tests first with: make test or make test-all"; \
+		exit 1; \
+	fi
 	@echo "Generating coverage report..."
 	hatch run coverage-report:run-coverage
 
