Fix coverage report for CI/CD with parallel coverage files
Handle case where tests generate parallel coverage files (.coverage.*)
but don't combine them before coverage-report is called. This occurs
in CI/CD when tests fail or exit early, preventing the coverage combine
step from running.

The Makefile now:
- Checks for both .coverage and .coverage.* files
- Automatically combines parallel files if needed
- Preserves test exit codes for proper CI/CD failure reporting

--- a/python/Makefile
+++ b/python/Makefile
@@ -222,10 +222,14 @@ build-docs:
 # Combine coverage data and generate report
 .PHONY: coverage-report
 coverage-report:
-	@if [ ! -f .coverage ]; then \
+	@if [ ! -f .coverage ] && ! ls .coverage.* 1> /dev/null 2>&1; then \
 		echo "Error: No coverage data found (.coverage file missing)"; \
 		echo "Run tests first with: make test or make test-all"; \
 		exit 1; \
+	fi
+	@if ls .coverage.* 1> /dev/null 2>&1 && [ ! -f .coverage ]; then \
+		echo "Combining parallel coverage files..."; \
+		hatch run coverage-report:coverage combine; \
 	fi
 	@echo "Generating coverage report..."
 	hatch run coverage-report:run-coverage
