Integrate Window Builder APIs (#431)
* Merge master into window_builders to adopt new build system

- Migrated from tox to hatch/make build system
- Updated GitHub Actions workflows to use new build tools
- Added Makefile for standardized development commands
- Updated pyproject.toml with hatch configuration
- Preserved window_builders' TSSchema architecture
- Maintained all window builder refactoring changes

This merge brings window_builders up to date with the latest build
infrastructure while preserving the branch's core functionality.

* Remove aider cache file

- Removed .aider.tags.cache.v4/cache.db
- .aider* pattern already in .gitignore

* Fix SubsequenceTSIndex implementation for fromSubsequenceCol

- Implemented proper SubsequenceTSIndex class extending CompositeTSIndex
- Replaced temporary OrdinalTSIndex workaround in fromSubsequenceCol
- Added comprehensive tests for SubsequenceTSIndex with timestamp and date types
- All 324 tests passing (added 8 new tests for subsequence functionality)

This fixes the limitation noted in tsdf.py where subsequence columns were not
properly handled by the composite index structure.

* Fix linting issues for CI/CD

- Applied black formatting to tsschema.py and tsdf.py
- Removed unused imports from tsdf.py (cast, overload, OrdinalTSIndex, SimpleTSIndex, StandardTimeUnits, TimeUnit)
- All linting checks now pass

* Add validation for required src_str_field in all parsed index types

- Added validation for src_str_field in ParsedTimestampIndex and ParsedDateIndex
- Previously only validated for SubMicrosecondPrecisionTimestampIndex
- Provides clearer error messages when required parameters are missing
- Prevents unhelpful constructor errors

* Remove redundant isinstance check in rolling aggregation

The isinstance(expr, Column) check was redundant since line 1312-1313
already asserts that all expressions are Column instances. This assertion
guarantees expr is always a Column, making the conditional unnecessary.

* Move fn 

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -16,6 +16,8 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}.unittest
+    PYSPARK_PYTHON = {envpython}
+    PYSPARK_DRIVER_PYTHON = {envpython}
 basepython =
     dbr154: py311
     dbr143: py310
@@ -41,6 +43,8 @@ package = wheel
 wheel_build_env = .pkg
 setenv =
     COVERAGE_FILE = .coverage.{envname}.pytest
+    PYSPARK_PYTHON = {envpython}
+    PYSPARK_DRIVER_PYTHON = {envpython}
 basepython =
     dbr154: py311
     dbr143: py310
