Fix lint command in Makefile and GitHub workflow
Remove LINT_PARAMS parameter passing that was causing hatch to
misinterpret arguments. The --check and --diff flags are already
defined in pyproject.toml, making the parameter passing redundant
and problematic.

This fixes the 'TypeError: the JSON object must be str, bytes or
bytearray, not Sentinel' error in CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install hatch 
     - name: Lint check
       working-directory: ./python
-      run: make lint LINT_PARAMS="-- --check --diff"
+      run: make lint
     - name: Type check
       working-directory: ./python
       run: make type-check
