--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -28,10 +28,9 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install hatch
+      - name: Setup development tools
+        working-directory: ./python
+        run: make setup
 
       - name: Build docs
         working-directory: ./python
