--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,10 +27,9 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install hatch
+      - name: Setup development tools
+        working-directory: ./python
+        run: make setup
 
       - name: Build dist
         working-directory: ./python
