--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install hatch 
+    - name: Setup development tools
+      working-directory: ./python
+      run: make setup 
     - name: Lint check
       working-directory: ./python
       run: make lint
@@ -56,11 +55,9 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.config.py }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install semver
-        python -m pip install hatch
+    - name: Setup development tools
+      working-directory: ./python
+      run: make setup
     - name: Execute hatch envs
       working-directory: ./python
       run: make test coverage-report DBR=${{ matrix.config.dbr }}
