Remove hatch references from GitHub workflow step names
- Changed 'Execute hatch envs' to 'Run tests' for clarity
- Keep implementation details abstracted behind make commands

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Setup development tools
       working-directory: ./python
       run: make setup
-    - name: Execute hatch envs
+    - name: Run tests
       working-directory: ./python
       run: make test coverage-report DBR=${{ matrix.config.dbr }}
     - name: Publish test coverage
