Fix undefined dev-setup target in Makefile
Replace the undefined 'dev-setup' target with the existing 'setup' target
in the init command. This resolves the issue identified in PR review comments
where 'make init' was failing due to the missing target.

--- a/python/Makefile
+++ b/python/Makefile
@@ -86,7 +86,7 @@ setup:
 init:
 	@echo " Initializing complete development environment..."
 	@echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-	@$(MAKE) dev-setup
+	@$(MAKE) setup
 	@echo ""
 	@$(MAKE) check-env
 	@echo ""
