Refactor Makefile targets for better logical organization
- Removed confusing 'all-local' target
- Added 'quality' target that runs format → lint → type-check sequentially
- Added 'build' target combining build-dist and build-docs
- Added 'ci' target for complete CI pipeline (quality + test-all + build + coverage)
- Added 'all' as alias for 'ci'
- Reorganized help text into logical sections
- Updated GitHub workflow to use new 'quality' target
- Added success messages to key targets for better user feedback
- Updated CONTRIBUTING.md to reflect new make target structure

This provides clearer separation of concerns:
- 'quality' for all code quality checks
- 'test-all' for all tests across environments
- 'build' for all build artifacts
- 'ci'/'all' for complete pipeline

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,10 @@ jobs:
         python-version: '3.10'
     - name: Setup development tools
       working-directory: ./python
-      run: make setup 
-    - name: Lint check
+      run: make setup
+    - name: Run code quality checks (format, lint, type-check)
       working-directory: ./python
-      run: make lint
-    - name: Type check
-      working-directory: ./python
-      run: make type-check
+      run: make quality
 
   test:
     needs: lint-and-check
