--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,16 +19,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install hatch 
-    - name: Lint check
+    - name: Setup development tools
       working-directory: ./python
-      run: make lint
-    - name: Type check
+      run: make setup
+    - name: Run code quality checks (format, lint, type-check)
       working-directory: ./python
-      run: make type-check
+      run: make quality
 
   test:
     needs: lint-and-check
@@ -56,12 +52,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.config.py }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install semver
-        python -m pip install hatch
-    - name: Execute hatch envs
+    - name: Setup development tools
+      working-directory: ./python
+      run: make setup
+    - name: Run tests
       working-directory: ./python
       run: make test coverage-report DBR=${{ matrix.config.dbr }}
     - name: Publish test coverage
